@@ -8,9 +8,21 @@ using Pianist;
 [CustomEditor(typeof(MeshBuilder))]
 public class MeshBuilderEditor : Editor
 {
+	private string name;
+
 	public override void OnInspectorGUI()
 	{
 		MeshBuilder t = target as MeshBuilder;
+
+		{
+			EditorGUI.BeginChangeCheck();
+
+			EditorGUILayout.PropertyField(serializedObject.FindProperty("Name"), true);
+			EditorGUILayout.PropertyField(serializedObject.FindProperty("AssetFolder"), true);
+
+			if (EditorGUI.EndChangeCheck())
+				serializedObject.ApplyModifiedProperties();
+		}
 
 		t.PointerCount = EditorGUILayout.IntField("Pointers Count", t.PointerCount);
 
@@ -19,23 +31,11 @@ public class MeshBuilderEditor : Editor
 			Transform trans = t.getPointerAt(i);
 			trans.localPosition = EditorGUILayout.Vector3Field(i.ToString(), trans.localPosition);
 		}
+
+		if (GUILayout.Button("Export Mesh"))
+		{
+			UnityEditor.AssetDatabase.CreateAsset(t.ResultMesh, t.AssetFolder + t.Name + ".prefab");
+			UnityEditor.AssetDatabase.SaveAssets();
+		}
 	}
 }
-
-
-/*[CustomPropertyDrawer(typeof(MeshBuilder.Pointer))]
-public class PointerDrawer : PropertyDrawer
-{
-	public override void OnGUI(Rect position, SerializedProperty property, GUIContent label)
-	{
-		MeshBuilder.Pointer data = fieldInfo.GetValue(property.serializedObject.targetObject) as MeshBuilder.Pointer;
-
-		EditorGUI.BeginProperty(position, label, property);
-
-		if(data == null)
-			data = new MeshBuilder.Pointer();
-		data.position = EditorGUI.Vector3Field(position, "", data.position);
-
-		EditorGUI.EndProperty();
-	}
-}*/
